preprod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assur-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assur-front
  template:
    metadata:
      labels:
        app: assur-front
    spec:
      serviceAccountName: internal-app
      # securityContext:
      #   runAsUser: 0
      #   runAsGroup: 0
      #   fsGroup: 0
      containers:
      - name: assur-front
        image: maryeeem/assur-front:4.0.5
        command: ['sh', '-c', 'npm run dev']
        imagePullPolicy: Always
        # securityContext:
        #   runAsUser: 0
        #   runAsGroup: 0
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: false
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
#        resources:
#          limits:
 #           cpu: "50m"
 #           memory: "128Mi"
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: vault-assure-api-provider
