preprod/services.yml
apiVersion: v1
kind: Service
metadata:
  name: assur-front-service
  namespace: preprod
spec:
  selector:
    app: assur-front
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
