preprod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assur-front-ingress
  namespace: preprod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: assurefront.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assur-front-service
            port:
              number: 3001
